<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/connectionListFragment">

    <fragment
        android:id="@+id/connectionListFragment"
        android:name="com.easyconnect.nas.ui.connection.ConnectionListFragment"
        android:label="@string/nav_connections"
        tools:layout="@layout/fragment_connection_list">
        <action
            android:id="@+id/action_connectionList_to_addConnection"
            app:destination="@id/addConnectionFragment" />
        <action
            android:id="@+id/action_connectionList_to_fileBrowser"
            app:destination="@id/fileBrowserFragment" />
    </fragment>

    <fragment
        android:id="@+id/addConnectionFragment"
        android:name="com.easyconnect.nas.ui.connection.AddConnectionFragment"
        android:label="@string/add_connection"
        tools:layout="@layout/fragment_add_connection">
        <argument
            android:name="connectionId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/fileBrowserFragment"
        android:name="com.easyconnect.nas.ui.browser.FileBrowserFragment"
        android:label="@string/nav_browser"
        tools:layout="@layout/fragment_file_browser">
        <argument
            android:name="connectionId"
            app:argType="long" />
        <argument
            android:name="initialPath"
            app:argType="string"
            android:defaultValue="/" />
    </fragment>

    <fragment
        android:id="@+id/transferQueueFragment"
        android:name="com.easyconnect.nas.ui.transfer.TransferQueueFragment"
        android:label="@string/nav_transfers"
        tools:layout="@layout/fragment_transfer_queue" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.easyconnect.nas.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
